--- a/style.css
+++ b/style.css
@@ -16,5 +16,6 @@ body{
     height: 500px;
     display: flex;
     justify-content: space-around;
+    align-items: center;
     background-color: lightgray;
 }
