--- a/style.css
+++ b/style.css
@@ -16,5 +16,36 @@ body{
     height: 500px;
     display: flex;
     justify-content: space-around;
+    align-items: center;
     background-color: lightgray;
+}
+.green{
+    background: green;
+    width: 187px;
+    height: 187px;
+    border-radius: 100%;
+    position: relative;
+}
+.green__eyes{
+    width: 100px;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    z-index: 1;
+    margin: 50px 0 0 375px;
+}
+.green__eye{
+    width: 37px;
+    height: 39px;
+    background: green;
+    border-radius:50% ;
+}
+.green__mouth{
+    position: relative;
+    z-index: 1;
+    width: 114px;
+    height: 35px;
+    background: green;
+    border-radius: 0px 0px 125px 125px;
+    margin: 50px 0 0 -300px;
 }
